# Hardware-Team-2025-2026

./: .gitmodules  README.md
hub/: .gitignore  README.md
hub/config/: ekf.yaml
hub/src/behaviors/: CMakeLists.txt  package.xml
hub/src/behaviors/behavior_trees/: autonomous.xml  keypad.xml  tests.xml
hub/src/behaviors/config/: bt_executor.yaml
hub/src/behaviors/include/behaviors/: drive_to_pose_node.hpp  finger_node.hpp  report_color_node.hpp  start_node.hpp
hub/src/behaviors/launch/: bt_executor.launch.xml
hub/src/behaviors/src/: bool_client.cpp  bt_executor.cpp  drive_to_pose_node.cpp  finger_node.cpp  plugin.cpp  report_color_node.cpp  set_bool_node.cpp  sleep_action.cpp  sleep_client.cpp  start_node.cpp
hub/src/bno08x-ros2-driver/config/: bno085_i2c.yaml
hub/src/bt_navigation/: CMakeLists.txt  package.xml
hub/src/bt_navigation/behavior_trees/: nav_tree_test.xml
hub/src/bt_navigation/include/behavior_trees/: nav_tree_test.xml
hub/src/bt_navigation/include/bt_navigation/: navigate_to_pose_bt.hpp
hub/src/bt_navigation/src/: bt_navigator_node.cpp  navigator_bt.cpp
hub/src/camera_utils/: package.xml  setup.py
hub/src/camera_utils/camera_utils/: start_light_node.py
hub/src/camera_utils/launch/: start_light.launch.py
hub/src/drive_to_pose/: CMakeLists.txt  package.xml
hub/src/drive_to_pose/include/: pid.hpp
hub/src/drive_to_pose/include/drive_to_pose/: pid.hpp
hub/src/drive_to_pose/src/: drive_to_pose_action_client.cpp  drive_to_pose_action_server.cpp  drive_to_pose_action_server_turtle.cpp
hub/src/dtp_interfaces/: CMakeLists.txt  package.xml
hub/src/dtp_interfaces/action/: DriveToPose.action
hub/src/hub/: CMakeLists.txt  package.xml  readme.txt
hub/src/hub/include/hub/: pid.hpp
hub/src/hub/launch/: robot_bringup.launch.py
hub/src/hub/res/: ekf.yaml  robot.urdf.xacro
hub/src/hub/src/: chassis.cpp  drive_to_pose.cpp  drive_with_vel.cpp
hub/src/hub_interfaces/: CMakeLists.txt  package.xml
hub/src/hub_interfaces/action/: DriveToPose.action  DriveWithVel.action
hub/src/hub_interfaces/srv/: Finger.srv  ReportColor.srv
hub/src/py_hub/: package.xml  setup.cfg  setup.py
hub/src/py_hub/py_hub/: enable_client.py  finger.py  finger_client.py  gate_client.py  lcd_driver.py  server.py
hub/src/rosbag2_2026_02_25-02_43_28/: metadata.yaml  rosbag2_2026_02_25-02_43_28_0.mcap
hub/src/rosbag2_2026_02_25-04_09_12/: metadata.yaml  rosbag2_2026_02_25-04_09_12_0.mcap
hub/src/rosbag2_2026_02_26-03_20_35/: metadata.yaml  rosbag2_2026_02_26-03_20_35_0.mcap
hub/src/rosbag2_2026_02_26-23_51_23/: metadata.yaml
hub/src/rosbag2_2026_02_26-23_56_04/: metadata.yaml
hub/src/rosbag2_2026_02_27-00_16_49/: metadata.yaml
hub/src/start_light/: package.xml  setup.cfg  setup.py
hub/src/start_light/start_light/: start_light_node.py
pcb/: .gitignore  bom.csv  fp-info-cache  fp-lib-table  ieee.kicad_pcb  ieee.kicad_prl  ieee.kicad_pro  ieee.kicad_sch  ieee.kicad_sym  manipulation.kicad_sch  pico.kicad_sch  sym-lib-table
pcb/fab/: ieee-B_Cu.gbr  ieee-B_Mask.gbr  ieee-B_Paste.gbr  ieee-B_Silkscreen.gbr  ieee-Edge_Cuts.gbr  ieee-F_Cu.gbr  ieee-F_Mask.gbr  ieee-F_Paste.gbr  ieee-F_Silkscreen.gbr  ieee-In1_Cu.gbr  ieee-In2_Cu.gbr  ieee-NPTH.drl  ieee-PTH.drl  ieee-job.gbrjob
pcb/ieee.pretty/: D36V50F5.kicad_mod  DRV8833.kicad_mod  GY-BNO085.kicad_mod  NS0024A.stp  NS24-L.kicad_mod  NS24-M.kicad_mod  NS24.kicad_mod  Raspberry_Pi_5.kicad_mod  TB9051FTG.kicad_mod
pico-code/: CMakeLists.txt  motor-control.c
pico-code/include/: encoder.h  keyboard.h  kinematics.h  ma.h  motor.h  nec_protocol.h  nec_transmit.h  odom.h  pid.h  pinout.h  uart.h
pico-code/src/: encoder.c  keyboard.c  kinematics.c  ma.c  motor.c  nec_protocol.c  nec_transmit.c  odom.c  pid.c  pinout.c  uart.c
