<package format="3">
  <name>behaviors</name>
  <version>0.1.0</version>
  <description>
  Behavior tree nodes and related utilities for the 2025-2026 IEEE Robotics Team. 
  </description>

  <maintainer email="iyer.nikhil@ufl.edu">Nikhil Iyer</maintainer>
  <license>MIT</license>
  <author>Nikhil Iyer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_ros2</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>btcpp_ros2_interfaces</depend>
  <depend>hub_interfaces</depend>

<export>
  <build_type>ament_cmake</build_type>
</export>

</package>
